BUGFIX: navbar alignment in firefox

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/NavBar/NavBar.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/NavBar/NavBar.scss
@@ -218,7 +218,8 @@
         padding: 0;
         line-height: 24px;
         font-size: .9rem;
-        font-weight: 500
+        font-weight: 500;
+        display: inline-block;
     }
 
     .nav-links {
